Simplify Main.