@@ -1,40 +1,25 @@
 package net.minecraft.launchwrapper.nallar.cachingclassloader;
 
-import lombok.val;
-
 import java.io.*;
 import java.lang.reflect.*;
 import java.net.*;
 import java.util.*;
 
 public class Main {
-	private static final String serverJarArgument = "--serverjar=";
-	private static final Method addUrlMethod = getAddURLMethod();
-	private static final boolean ADD_LIBRARIES = Boolean.getBoolean(System.getProperty("cachingClassLoader.addLibraries", "false"));
-	@SuppressWarnings("WeakerAccess")
-	public static String[] startupArgs;
-
 	public static void main(String[] args) {
-		try {
-			run(args);
-		} catch (Throwable t) {
-			t.printStackTrace(System.err);
-		}
-	}
-
-	private static void run(String[] args) throws Exception {
 		ClassLoader classLoader = Main.class.getClassLoader();
 		String loc = null;
 		ArrayList<String> argsList = new ArrayList<>(Arrays.asList(args));
 		for (Iterator<String> i$ = argsList.iterator(); i$.hasNext(); ) {
 			String arg = i$.next();
+			final String serverJarArgument = "--serverjar=";
 			if (arg.toLowerCase().startsWith(serverJarArgument)) {
 				loc = arg.substring(serverJarArgument.length());
 				i$.remove();
 				break;
 			}
 		}
-		startupArgs = args = argsList.toArray(new String[argsList.size()]);
+		args = argsList.toArray(new String[argsList.size()]);
 		if (loc == null) {
 			loc = System.getProperty("serverJar");
 		}
@@ -66,7 +51,7 @@ public class Main {
 		if (loc == null) {
 			System.err.println("You have not specified a server jar");
 			System.err.println("Please add --serverJar=<minecraft forge jar name here> at the end of your java arguments.");
-			System.err.println("Example: java -Xmx=2G -XX:MaxPermSize=256m -XX:+AgressiveOpts -jar cachingClassLoader.jar --serverJar=minecraft_forge.jar");
+			System.err.println("Example: java -jar cachingClassLoader.jar --serverJar=minecraft_forge.jar");
 			System.exit(1);
 		}
 		File locFile = new File(loc);
@@ -82,26 +67,6 @@ public class Main {
 			System.err.println("Could not find specified server jar: " + loc + " @ " + locFile);
 			System.exit(1);
 		}
-		if (ADD_LIBRARIES) {
-			File libraries = new File("libraries");
-			addLibraries(classLoader, libraries);
-		}
-	}
-
-	private static void addLibraries(URLClassLoader classLoader, File file) {
-		File[] files = file.listFiles();
-		if (files != null) {
-			for (File inner : files) {
-				if (inner.isDirectory())
-					addLibraries(classLoader, inner);
-				else if (inner.isFile()) {
-					val lName = inner.getName().toLowerCase();
-					if (lName.endsWith(".jar") || lName.endsWith(".zip"))
-						addPathToClassLoader(inner, classLoader);
-				}
-			}
-		}
-
 	}
 
 	private static Method getAddURLMethod() {
@@ -119,7 +84,7 @@ public class Main {
 		try {
 			URL u = path.toURI().toURL();
 			System.out.println("Added " + u + " to " + classLoader);
-			addUrlMethod.invoke(classLoader, u);
+			getAddURLMethod().invoke(classLoader, u);
 		} catch (Throwable t) {
 			throw new RuntimeException(t);
 		}
